--- a/android/app/src/main/res/color/ic_launcher_background.xml
+++ b/android/app/src/main/res/color/ic_launcher_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <color name="ic_launcher_background">#FF7E5A</color>
-</resources>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:color="#FF7E5A" />
+</selector>
